# aisl

./: .gitignore  .gitmodules  AUTHORS  AUTHORS.md  CHANGELOG  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md  aisl.proj  cmake.compiler  cmake.paths  cmake.system  cmake.version  examples.mk  libaisl.pc.example  project.mk  project.sh  version
bare/: Makefile
bare/src/: main.c  router.c  router.h  welcome.c  welcome.h
doc/: api-reference.conf
examples/: hello-world.c
include/aisl/: aisl.h  client.h  config.h  event.h  handle.h  http.h  instance.h  server.h  status.h  stream.h  types.h
src/: )  buffer.c  buffer.h  client.c  client.h  debug.h  http.c  http.h  instance.c  instance.h  list.c  list.h  server.c  server.h  ssl.c  ssl.h  str-utils.c  str-utils.h  stream.c  stream.h  types.c
